--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
                     <div id="chatWindow" class="chat-window">
                         <div class="system">Ask questions about places in the database.</div>
                     </div>
-                    <button id="scrollBottomBtn" class="scroll-bottom-btn d-none">Scroll to bottom</button>
+                    <button id="scrollBottomBtn" class="scroll-bottom-btn d-none" aria-label="Scroll to bottom"></button>
                     <form id="chatForm" class="chat-form">
                         <input id="chatInput" type="text" placeholder="Type your message..." autocomplete="off" />
                         <button type="submit">Send</button>
