--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -247,13 +247,53 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 16px;
+  height: 10px;
+  border: 2px solid var(--secondary-color);
+  border-bottom: none;
+  border-radius: 100% 100% 0 0 / 100% 100% 0 0;
+  background-color: transparent;
+}
+
+.arc-icon::after {
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+  left: -3px;
+  bottom: -2px;
+}
+
+.arc-icon::before {
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+  right: -3px;
+  bottom: -2px;
+}
+
+.choropleth-icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 14px;
   height: 14px;
-  border-top: 2px solid var(--secondary-color);
-  border-radius: 50% 50% 0 0;
-  border-left: 2px solid transparent;
-  border-right: 2px solid transparent;
-  background-color: transparent;
+  border: 2px solid var(--secondary-color);
+  background: linear-gradient(to right, 
+    var(--secondary-color) 0%, 
+    var(--secondary-color) 25%, 
+    transparent 25%, 
+    transparent 50%, 
+    var(--secondary-color) 50%, 
+    var(--secondary-color) 75%, 
+    transparent 75%, 
+    transparent 100%);
 }
 
 .descr {
