--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -311,12 +311,22 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 16px;
-  height: 10px;
-  border: 2px solid var(--secondary-color);
+  width: 0;
+  height: 0;
+}
+
+.arc-icon::before {
+  content: '';
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  border: 3px solid var(--secondary-color);
   border-bottom: none;
-  border-radius: 100% 100% 0 0 / 100% 100% 0 0;
-  background-color: transparent;
+  border-right: none;
+  border-radius: 50% 0 0 0;
+  transform: rotate(45deg);
+  top: -9px;
+  left: -9px;
 }
 
 .arc-icon::after {
@@ -326,19 +336,8 @@ html, body {
   height: 4px;
   background-color: var(--secondary-color);
   border-radius: 50%;
-  left: -3px;
-  bottom: -2px;
-}
-
-.arc-icon::before {
-  content: '';
-  position: absolute;
-  width: 4px;
-  height: 4px;
-  background-color: var(--secondary-color);
-  border-radius: 50%;
-  right: -3px;
-  bottom: -2px;
+  bottom: 8px;
+  right: 8px;
 }
 
 .choropleth-icon {
