--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -311,22 +311,20 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 0;
-  height: 0;
+  width: 18px;
+  height: 18px;
 }
 
 .arc-icon::before {
   content: '';
   position: absolute;
-  width: 18px;
-  height: 18px;
-  border: 3px solid var(--secondary-color);
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--secondary-color);
   border-bottom: none;
   border-right: none;
   border-radius: 50% 0 0 0;
   transform: rotate(45deg);
-  top: -9px;
-  left: -9px;
 }
 
 .arc-icon::after {
@@ -336,8 +334,8 @@ html, body {
   height: 4px;
   background-color: var(--secondary-color);
   border-radius: 50%;
-  bottom: 8px;
-  right: 8px;
+  bottom: -2px;
+  right: -2px;
 }
 
 .choropleth-icon {
@@ -345,18 +343,17 @@ html, body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 14px;
-  height: 14px;
+  width: 18px;
+  height: 18px;
   border: 2px solid var(--secondary-color);
-  background: linear-gradient(to right, 
-    var(--secondary-color) 0%, 
-    var(--secondary-color) 25%, 
-    transparent 25%, 
-    transparent 50%, 
-    var(--secondary-color) 50%, 
-    var(--secondary-color) 75%, 
-    transparent 75%, 
-    transparent 100%);
+  border-radius: 2px;
+  background: repeating-linear-gradient(
+    90deg,
+    var(--secondary-color) 0px,
+    var(--secondary-color) 3px,
+    transparent 3px,
+    transparent 6px
+  );
 }
 
 .descr {
