--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -307,24 +307,22 @@ html, body {
 }
 
 .arc-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 18px;
-  height: 18px;
+  position: relative;
+  width: 20px;
+  height: 20px;
 }
 
 .arc-icon::before {
   content: '';
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 2px;
+  left: 2px;
+  width: 14px;
+  height: 14px;
   border: 2px solid var(--secondary-color);
   border-bottom: none;
-  border-right: none;
-  border-radius: 50% 0 0 0;
-  transform: rotate(45deg);
+  border-left: none;
+  border-radius: 0 100% 0 0;
 }
 
 .arc-icon::after {
@@ -334,15 +332,12 @@ html, body {
   height: 4px;
   background-color: var(--secondary-color);
   border-radius: 50%;
-  bottom: -2px;
-  right: -2px;
+  bottom: 3px;
+  left: 3px;
 }
 
 .choropleth-icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  position: relative;
   width: 18px;
   height: 18px;
   border: 2px solid var(--secondary-color);
